terminar de completar header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 </head>
 <body>
     
-    <header id="contenedor_titulo">
-        <h1 class="Titulo">Pagina web de pruebas</h1>
-    </header>
+<header>
+    <nav>
+        <section id="contenedor">
+            <div class="Titulo">
+                <h1>Titulo</h1>
+            </div>
+            <ul id="menu">
+                <li class="item" ><a href="#" class="link">item 1</a></li>
+                <li class="item"><a href="#" class="link">item 1</a></li>
+                <li class="item"><a href="#" class="link">item 1</a></li>
+                <li class="item"><a href="#" class="link">item 1</a></li>
+            </ul>
+        </section>
+    </nav>
+</header>
 
     <div id="contenedor_principal">
 
@@ -34,7 +46,7 @@
         </div>
 
         <!--Texto-->
-        <h2>Titulo articulo 1</h2>
+        <h2 id="primer-titulo">Titulo articulo 1</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae molestias eos, ad rem quidem dicta hic facere neque temporibus suscipit omnis accusamus doloribus corrupti quia quis sint. Nulla, fuga eligendi.
         Repellendus tenetur ullam, perferendis facere, accusamus consectetur architecto non at porro repudiandae obcaecati facilis aut officiis ab ex dolorem, iure quo eum! Corrupti ducimus et enim vel a ad in?
         Distinctio similique praesentium, quibusdam ut dolorem molestiae cumque laudantium officiis sunt modi, hic voluptate dolorum quidem, rerum iure numquam consequuntur inventore nisi iste. Harum, at assumenda quis deserunt et illo.
