--- a/index.html
+++ b/index.html
@@ -35,14 +35,20 @@
 <header>
     <nav>
         <section id="contenedor">
-            <div class="Titulo">
-                <h1>Titulo</h1>
-            </div>
+                <h1 class="Titulo">Titulo</h1>
             <ul id="menu">
-                <li class="item" ><a href="#" class="link">item 1</a></li>
-                <li class="item"><a href="#" class="link">item 1</a></li>
-                <li class="item"><a href="#" class="link">item 1</a></li>
-                <li class="item"><a href="#" class="link">item 1</a></li>
+                <li class="item" >
+                    <a href="#" class="link">item 1</a>
+                </li>
+                <li class="item">
+                    <a href="#" class="link">item 2</a>
+                </li>
+                <li class="item">
+                    <a href="#" class="link">item 3</a>
+                </li>
+                <li class="item">
+                    <a href="#" class="link">item 4</a>
+                </li>
             </ul>
         </section>
     </nav>
