--- a/index.html
+++ b/index.html
@@ -28,31 +28,13 @@
     <!--JavaScript-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
     <script src="inicio.js"></script>
+    <script src="validar.js"></script>
     <title>pruebas - inicio</title>
 </head>
 <body>
     
-<header>
-    <nav>
-        <section id="contenedor">
-                <h1 class="Titulo">Titulo</h1>
-            <ul id="menu">
-                <li class="item" >
-                    <a href="#" class="link">item 1</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">item 2</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">item 3</a>
-                </li>
-                <li class="item">
-                    <a href="#" class="link">item 4</a>
-                </li>
-            </ul>
-        </section>
-    </nav>
-</header>
+    <iframe class="frame" id="cabecera-frame" src="header.html"></iframe>
+    <iframe id="menu-lateral-frame" src="aside.html"></iframe>
 
     <div id="contenedor_principal">
 
@@ -133,7 +115,6 @@
         Eum tenetur maiores cupiditate, natus veniam nobis asperiores doloremque. Iste, pariatur nostrum explicabo numquam tempore veritatis quibusdam eos a iure at maxime laudantium, veniam tenetur culpa voluptate asperiores blanditiis dolores?
         Neque tempore itaque maiores temporibus error pariatur deleniti, commodi quia, blanditiis aut cum soluta labore nulla quod. Reprehenderit voluptate incidunt nostrum et repellendus provident error dicta aspernatur deleniti. Harum, illum.
         Consectetur enim quod officia quaerat commodi necessitatibus tempore a, velit explicabo ad nemo qui pariatur at voluptatibus optio, assumenda nostrum. Temporibus commodi impedit quod fuga inventore quaerat sequi sunt animi!</p>
-
         <!--Boton para abrir el modal-->
         <div id="button_item">
             <button id="boton-modal" onclick="mostrar();">mostrar modal</button>
